[tool.poetry]
name = "rag-agent"
version = "0.1.0"
description = ""
authors = ["pQbas <percybrayan18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langgraph = "0.3.24"
streamlit = "1.44.1"
langchain-openai = "^0.3.12"
langchain-deepseek = "^0.1.3"
dotenv = "^0.9.9"
langchain = "^0.3.23"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
