[tool.poetry]
name = "rag-agent"
version = "0.1.0"
description = ""
authors = ["pQbas <percybrayan18@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langgraph = "0.3.24"
streamlit = "1.44.1"
langchain-openai = "^0.3.12"
langchain-deepseek = "^0.1.3"
dotenv = "^0.9.9"
langchain = "^0.3.23"
langchain-chroma = "^0.2.2"
pysqlite3-binary = "^0.5.4"
langchain-ollama = "^0.3.0"
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
